@@ -16,6 +16,7 @@ int main (int argc, char* argv[])
     return 1;
   }
   //set row height
+  //xlsxiowrite_set_row_height(handle, 1);
   //how many rows to buffer to detect column widths
   xlsxiowrite_set_detection_rows(handle, 10);
   //write column names
@@ -30,7 +31,6 @@ int main (int argc, char* argv[])
   //write data
   int i;
   for (i = 0; i < 1000; i++) {
-    xlsxiowrite_set_row_height(handle, i);
     xlsxiowrite_add_cell_string(handle, "Test");
     xlsxiowrite_add_cell_string(handle, "A b  c   d    e     f\nnew line");
     xlsxiowrite_add_cell_string(handle, "&% <test> \"'");
